--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">SummerPractice</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Profile Screen</string>
 </resources>
