--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,20 @@
 <resources>
     <string name="app_name">SummerPractice</string>
     <string name="hello_blank_fragment">Profile Screen</string>
+    <string name="welcome">Welcome!</string>
+    <string name="Messages">Messages</string>
+    <string name="SignIn">Sign In</string>
+    <string name="SignUp">SignUp</string>
+    <string name="Notifications">Notifications</string>
+    <string name="Accout">Account</string>
+    <string name="Privacy">Privacy</string>
+    <string name="Appearance">Appearance</string>
+    <string name="NoNews">No news</string>
+    <string name="Subscribe">Subscribe to chanel</string>
+    <string name="Develop">Page in developed</string>
+    <string name="Exit">Exit</string>
+    <string name="Write">Write</string>
+    <string name="Name">Name</string>
+    <string name="desc">Desc</string>
+    <string name="textView">TextView</string>
 </resources>
